# TERMINAL-V2

./: .env.template  .gitattributes  .gitignore  ADAPTERS_IMPLEMENTATION_SUMMARY.md  ADAPTERS_SUMMARY.md  CLAUDE.md  DASHBOARD_IMPLEMENTATION_REPORT.txt  DELIVERABLES.txt  DELIVERY_REPORT.txt  DELIVERY_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_CHECKLIST.md  JOURNAL_PANEL_INTEGRATION.md  MAIN_WINDOW_INTEGRATION.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_EXECUTION_LOG.md  PHASE_2_FINAL_REPORT.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PHASE_2_VERIFICATION_REPORT.md  PLAN_MAESTRO.md  PROJECT_SCAFFOLD_SUMMARY.md  QUICKSTART_UI.md  README.md  README_TRADING_JOURNAL.md  READY_FOR_PHASE_2.md  RISK_PANEL_IMPLEMENTATION.md  RISK_PANEL_INTEGRATION.md  SCREENER_PANEL_IMPLEMENTATION.md  SENTIMENT_AND_COORDINATORS_DELIVERY.md  SESSION_SUMMARY_2026-04-25.md  THESIS_PANEL_FINAL_REPORT.md  THESIS_PANEL_GUIDE.md  TRADING_JOURNAL_DELIVERABLES.md  UI_IMPLEMENTATION_SUMMARY.md  UI_PANELS_ARCHITECTURE.md  UI_PANELS_SUMMARY.md  WIDGETS_DELIVERY.md  WIDGETS_SUMMARY.md  WIDGETS_USAGE_EXAMPLE.py  WIDGETS_VERIFICATION.txt  (+3 more)
.claude/skills/api-adapter-factory/: SKILL.md
examples/: backtest_panel_demo.py  journal_panel_demo.py
quantum_terminal/: config.py  main.py
quantum_terminal/domain/: models.py  portfolio_metrics.py  risk.py  screener_rules.py  thesis_scorer.py  trading_metrics.py  valuation.py
quantum_terminal/ui/: README.md  main_window.py
quantum_terminal/utils/: background_worker.py  batch_fetcher.py  cache.py  logger.py  rate_limiter.py  security.py
scripts/: dep_checker.py  phase_generator.py  project_orchestrator.py
tests/: test_analyzer_panel.py  test_backtest_panel.py  test_chart_widget.py  test_dashboard_panel.py  test_data_provider_gateway.py  test_data_table.py  test_deepseek_backend.py  test_earnings_panel.py  test_eia_adapter.py  test_embeddings.py  test_finnhub_adapter.py  test_fmp_adapter.py  test_forecast_engine.py  test_forecast_panel.py  test_fred_adapter.py  test_groq_backend.py  test_hf_backend.py  test_journal_panel.py  test_main_window.py  test_metric_card.py  test_openrouter_backend.py  test_pdf_intel_panel.py  test_qwen_backend.py  test_risk.py  test_risk_panel.py  test_screener_panel.py  test_sec_adapter.py  test_sentiment_adapters.py  test_thesis_panel.py  test_ticker_search.py  test_tiingo_adapter.py  test_valuation.py  test_watchlist_panel.py  test_yfinance_adapter.py
(+62 files in other folders)
